--- a/languages/en.json
+++ b/languages/en.json
@@ -12,28 +12,36 @@
       }
     },
     "app": {
-      "pick-bounds": "Pick Bounds",
-      "clear-bounds": "Clear Bounds"
+      "pick-bounds": "Select Boundary",
+      "clear-bounds": "Clear Boundaries"
     },
     "errors": {
       "no-scene": "An active scene required."
     },
     "info": {
-      "cleared-bounds": "Cleared bounds for scene {id}",
-      "new-bounds": "New bounds defined for scene {id} : {bounds}"
+      "cleared-bounds": "Cleared boundaries for scene {id}",
+      "new-bounds": "New boundary defined for scene {id} : {bounds}"
     },
     "settings": {
       "configure-bounds": {
-        "name": "Tile Bound Config",
-        "hint": "Configure tile bounds for the current scene."
+        "name": "Boundary Configuration",
+        "hint": "Define movement restricting boundaries for the current scene."
       },
       "fit-in-bounds": {
-        "name": "Tile must fit within bounds",
-        "hint": "Only updates that fit the the whole tile within the defined bounds will be permitted."
+        "name": "Fit within boundary",
+        "hint": "Only updates that fit the whole placeable within boundaries will be permitted."
       },
       "configure-bounds-key": {
-        "name": "Tile Bound Config",
-        "hint": "Opens tile bound configuration for the current scene."
+        "name": "Boundary Configuration",
+        "hint": "Opens boundary configuration for the current scene."
+      },
+      "enable-tile-controls": {
+        "name": "Tile Controls",
+        "hint": "Activates the module for tiles. (GAME RELOAD REQUIRED)"
+      },
+      "enable-token-controls": {
+        "name": "Token Controls",
+        "hint": "Activates the module for tokens. (GAME RELOAD REQUIRED)"
       }
     }
   }
